style: shortened button text for cleaner layout

--- a/src/ui/ui.html
+++ b/src/ui/ui.html
@@ -220,8 +220,8 @@
     </div>
 
     <div class="button-group">
-      <button id="refresh">Refresh Analysis</button>
-      <button id="create" disabled>Create Sprite Sheet</button>
+      <button id="refresh">Refresh</button>
+      <button id="create" disabled>Create</button>
     </div>
     
     <script>
